Closed Bug 353430 Opened 19 years ago Closed 19 years ago

nsHTTPConn::Request never frees usrPsd

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: timeless, Assigned: sciguyryan)

References

()

Details

(Keywords: coverity, memory-leak)

Attachments

(1 file, 1 obsolete file)

Attached patch Patch v1 (obsolete) — Splinter Review
Add a |free(usrPsd)| before returning to clear memory.
Assignee: xpi-engine → sciguyryan+bugzilla
Status: NEW → ASSIGNED
Attachment #239666 - Flags: superreview?(dveditz)
Attachment #239666 - Flags: review?(benjamin)
Comment on attachment 239666 [details] [diff] [review] Patch v1 You could put a single free() right after the last use of usrPsd (the call to Base64Encode) instead of having to watch out for multiple return points, but I'm fine with it either way. r/sr=dveditz
Attachment #239666 - Flags: superreview?(dveditz)
Attachment #239666 - Flags: superreview+
Attachment #239666 - Flags: review?(benjamin)
Attachment #239666 - Flags: review+
Attached patch Patch v2Splinter Review
Your right, here's the version per your comments.
Attachment #239666 - Attachment is obsolete: true
Attachment #239673 - Flags: superreview?(dveditz)
Attachment #239673 - Flags: review?(dveditz)
Comment on attachment 239673 [details] [diff] [review] Patch v2 r/sr=dveditz
Attachment #239673 - Flags: superreview?(dveditz)
Attachment #239673 - Flags: superreview+
Attachment #239673 - Flags: review?(dveditz)
Attachment #239673 - Flags: review+
Whiteboard: [checkin needed]
mozilla/xpinstall/wizard/libxpnet/src/nsHTTPConn.cpp 1.18
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
OS: Linux → All
Hardware: PC → All
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Target Milestone: --- → mozilla1.9alpha
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: