Bug 353430: nsHTTPConn::Request never frees usrPsd, patch by Ryan Jones <sciguyryan+bugzilla@gmail.com>, r+sr=dveditz